2015-05-17  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: ensure we get a wakeup call while being in gwthread_sleep()
      in sms_to_smsboxes(), which reduces the shutdown waiting time. Ensure
      we don't re-loop if we're in shutdown phase.
    * gw/bearerbox.c: issue gwthread_wakeup_all() after bb_shutdown() in order
      to wakeup all pending sleepers.
    [Msg-Id: <55364459.7030503@kannel.org>]
      
2015-03-19  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_store_redis.c: fix memory leak when the result set is empty, we still
      get a single row entry from the redis side, which needs to be destroyed.
      
2015-03-18  Stipe Tolj  <stolj at kannel.org>
    * config.guess: update to latest version to support various more platforms.
      [http://savannah.gnu.org/projects/config]
      
2015-03-12 Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: fixed make invocation for subfolders

2015-03-12 Alexander Malysh <amalysh at kannel.org>
    * Makefile.in: addeed possibility to easy add subdirectories to build process

2015-03-12 Alexander Malysh <amalysh at kannel.org>
    * Makefile.in, aclocal.m4, bootstrap.sh, configure, configure.in, soap/Makefile.in:
      first step in automake direction.

2015-02-23  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: the queued callback function should return the number
      of messages in queue, and not the open requests that we are pending.

2015-02-20  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/store-redis.conf: configuration example for redis msg store.
    * doc/userguide/userguide.xml: document 'store-type = redis' option.
    * gw/bb_store_redis.c: backend implementation of the message store in a
      redis key store.
    * gw/bb_store.[ch]: adding Cfg* passing in store_init() prototype.
    * gw/bearerbox.c: changed to do store_init() prototype change.
    * gwlib/cfg.def: adding 'group = store-db' as group for message backends
      as databases or key stores.